# VobSub2SRT

./: CMakeLists.txt
doc/: CMakeLists.txt
src/: vobsub2srt.c++
